[package]
name = "async_drop"
version = "0.1.0"
authors = ["liangyongrui <leungyongrui@gmail.com>"]
edition = "2018"
description = 'A smart pointer which executes drop asynchronously in tokio.'
keywords = ['async', 'drop']
homepage = 'https://github.com/liangyongrui/async_drop'
repository = 'https://github.com/liangyongrui/async_drop'
readme = 'readme.md'
license = 'MIT OR Apache-2.0'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = "1"

[dev-dependencies]
chrono = "0.4"
tokio = { version = '1', features = ["full"] }
